--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 .container{
     min-width: 300px;
     max-width: 900px;
-    margin: 0 auto;
+    margin: 2em auto;
     padding: 0 2em;
     color: #fff;
     height: 100vh;
